<resources>
    <string name="app_name">Musingo</string>
    <string name="bottom_text">PLAY FOR GOOD.</string>
    <string name="action_settings">Settings</string>
    <string name="partner_site">http://www.partner.com</string>
    <string name="site">http://www.goodworldgames.com</string>
    <string name="fb_hint">http://www.goodworldgames.com/song/</string>
    <string name="one">When you tap on PLAY, the countdown to the game will begin</string>
    <string name="two">When the countdown ends, a 9-square gameboard will appear &amp; the first song of the game will start</string>
    <string name="three">Tap on the song name that you think is playing</string>
    <string name="four">Tho only way to advance to the next playlist is to beat the challenge score. How well do you know your tunes?</string>
    <string name="hint">The hint powerup highlights 3 options on the board with 1 of them being the correct one</string>
    <string name="freeze">The freeze powerup pauses the song timer while still allowing tho song to play. Get a higher score with a shorter time!</string>
    <string name="skip">Tho skip powerup lets you pass the current song, with the ability to come back to it later. Maybe it\'ll be clearer what it is at the end of the round </string>
    <string name="replay">The replay poweup gives you another chance to hear the song</string>
    <string name="longer_clip">Tho longer clip powerup adds on an extra 10 seconds to the song, giving you more to guess on</string>
    <string name="help">The facebook powerup is FREE and lets you reach out to friends for help. Maybe they\'ll know the answer for you to move on!</string>
    <string name="next_playlist">The next playlist powerup allows you to move on to the next playlist without having to conquer tho score to beat.</string>
    <string name="aboutUs">Good World Games os a pioneer of the Gaming for good movement.
        We allow playes to make a difference while having fun.
        We partner with non-profits to support causes through our games.\n\n
        Games in and of themselves are great, but games that also do good are awesome.
        We had the crazy idea that maybe games are more than about having fun and entrtaining your brain for a few minutes here, a few hours there.\n\n
        What if games can change the way people behave in their lives? What if, through the power of games, we can leverage our collective wealth, intelligance, and energy to help solve hard problems?
         Join our movement!\n\n
        For more information visit:
    </string>
    <string name="our_aim">OUR AIM IS TO SUPPORT MARINE CONSERVATION EFFORTS THROUGH PLAY. LEARN MORE ABOUT OUR PARTNERS BELOW AND HOW THEY ARE HELPING OUR OCEANS!</string>
    <string name="partners_title">Guy Harvey Ocean Foundation</string>
    <string name="partners_text">The Guy Harvey Ocean Foundation funds inspired scientific research
        and innovative educational programs to encourage conservation and best management practices for sustainable marine environments.
        The Guy Harvey Ocean Foundation will help ensure that future generation can enjoy and benefit from a naturally balance marine ecosystem where fish and other wildwife flourish.\n <font fgcolor="#ffe85c8d">Learn more</font></string>
    <string name="appIdChartboost">52e8d45f9ddc3556655f4a22</string>
    <string name="appSignatureChartboost">502e57fa543ef4b8f5528f5043ebf85279d76dd1</string>
    <string name="appIdFacebook">564077767013631</string>
    <string name="mixPanel_token">52d86a1905e48f9f0bb6b10b8ff2f0cd</string>
    <string name="tutorial1">YOU HAVE 10 SECONDS TO GUESS THE SONG</string>
    <string name="tutorial2">TAP THE ALBUM COVER OF THE SONG YOU THINK IS PLAYNG. TRY IT NOW!</string>
    <string name="tutorial3">NICE TRY! YOUR SCORE REFLECTS HOW FAST YOU GUESSED THE SONG</string>
    <string name="tutorial4">YOU\'RE DOING GREAT! TO BEAT THIS LEVEL, SCORE HIGHER THAN THE OBJECTIVE! <b>LET\'S PLAY.</b></string>
    <string name="tutorial5">IF YOU\'RE EVER STUCK AND NEED THE KNOWLEDGE OF YOUR FRIENDS ON FB!</string>
    <string name="tutorial6">YOU ARE ROCKIN\' THIS PLAYLIST! PSSST... YOU CAN EARN BONUS POINTS TOO! <b>KEEP GOING!</b></string>
    <string name="tap_for_next">TAP FOR NEXT</string>
    <string name="tutorial1Package">YOU JUST PLAYED YOUR FIRST PLAYLIST! YOU CAN EARN UP TO 3 STARS PER PLAYLIST.</string>
    <string name="tutorial2Package">THE STAR LEGEND LIVES HERE. EARNING <u>STARS</u> LETS YOU UNLOCK MORE PLAYLISTS!</string>
    <string name="tutorial3Package">TAKE ON ANY PLAYLIST IN WHATEVER ORDER YOU LIKE. <b>TRY ONE NOW!</b></string>
    <string name="hint_powerup_title">You ve unlocked the \n HINT POWERUP.</string>
    <string name="hint_powerup_body">IT HIGHLIGHTS 3 SQUARES ON THE BOARD FOR YOU TO CHOOSE FROM.</string>
    <string name="skip_powerup_title">You\'ve unlocked the \n SKIP POWERUP.</string>
    <string name="skip_powerup_body">PASS THE CURRENT SONG, WITH THE CHANCE TO COME BACK TO IT LATER.</string>
    <string name="replay_powerup_title">You ve unlocked the \n REPLAY POWERUP.</string>
    <string name="replay_powerup_body">IT\'GIVES YOU ANOTHER CHANCE TO HEAR THE SONG.</string>
    <string name="freeze_powerup_title">You ve unlocked the \n FREEZE POWERUP.</string>
    <string name="freeze_powerup_body">PAUSE THE SONG TIMER WHILE LISTENING TO THE SONG. GET A HIGHER SCORE!</string>
    <string name="longer_clip_powerup_title">You ve unlocked the \n LONGER CLIP POWERUP.</string>
    <string name="longer_clip_powerup_body">IT ADDS AN EXTRA IO SECS TO THE SONG TO GIVE YOU MORE TO GO ON.</string>
    <string name="next_playlist_powerup_title">You\'ve unlocked the \n NEXT PLAYLIST POWERUP.</string>
    <string name="next_playlist_powerup_body">GET TO THE NEXT PLAYLIST WIRHOUR HAVING TO CONQUER THE SCORE T BEAT.</string>
    <string name="replay_alert">HEAR THE SONG AGAIN</string>
    <string name="longer_clip_alert">YOU GET AN EXTRA IO SECONDS1</string>
    <string name="sskip_alert">YOU\'LL GET A SECOND CHANCE AT THE END</string>
    <string name="did_you_know_1">We have explored only about 5 percent of the ocean. Humans have better maps of Mars than of the ocean floor!</string>
    <string name="did_you_know_2">Teenage boys are paying $150 to get bieber\'s hairstyle!</string>
    <string name="did_you_know_3">There are 216,000 recognized marine species, but scientists estimate there may be more than a million left to discover!</string>
    <string name="did_you_know_4">The ocean contains 99% of the available space to support life on planet Earth.</string>
    <string name="did_you_know_5">If the salt in the ocean were removed and spread over all land, it would form a layer more than 500 feet thick.</string>
    <string name="did_you_know_6">Sharks evolved 450 million years ago--more than 200 million years before the earliest dinosaurs!</string>
    <string name="did_you_know_7">Green Sea Turtles get their name from the color of the body fat under their carapaces.</string>
    <string name="did_you_know_8">NOAA\'s official value for the total length of the U.S. shoreline is 95,471 miles!</string>
    <string name="did_you_know_9">The wreck of the Monitor, a prototype warship from the Civil War, became the first US National Marine Sanctuary in 1975.</string>
    <string name="did_you_know_10">Mangrove forests \"build islands\" by trapping sediment. They provide critical habitat for many species.</string>
    <string name="did_you_know_11">Ghostfishing is the capture of fish and other marine animals by discarded or lost commercial and recreational fishing gear.</string>
    <string name="did_you_know_12">The ocean\'s role in the global climate provides nearly 50% of Earth\'s oxygen.</string>
    <string name="did_you_know_13">Carrageenan, extracted from red algae, is added to peanut butter to make it spreadable.</string>
    <string name="did_you_know_14">80 percent of the pollution in the marine environment comes from land. </string>
    <string name="did_you_know_15">Each year, three times as much garbage is dumped into the world\'s oceans as the weight of fish caught.</string>
    <string name="did_you_know_16">The ocean is blue because water absorbs the red part of the light spectrum.</string>
    <string name="did_you_know_17">9 of the most commonly harvested 10 fish species are below 10% of their historical numbers.</string>
    <string name="did_you_know_18">1 in 3 of all the world\'s major fisheries are overexploited, and another 1/2 are fully exploited.</string>
    <string name="did_you_know_19">There are 7 species of sea turtles, and they\'re all threatened or endangered.</string>
    <string name="did_you_know_20">Some fish are caught when fishermen use dynamite to blow up coral reefs. </string>
    <string name="did_you_know_21">Coral reefs, which provide homes for thousands of unique species of fish and other animals, can take hundreds of years to grow.</string>
    <string name="did_you_know_22">Corals are animal (related to jellyfish), vegetable (symbiotic algae), and mineral (calcium carbonate skeleton).</string>
    <string name="did_you_know_23">Climate change is changing the chemistry of the oceans, which, if unchecked, will result in animals with shells dissolving.</string>
    <string name="did_you_know_24">The Gulf of Mexico has a large oxygen-free \"dead zone\" caused by fertilizer from farms along the Mississippi.</string>
    <string name="did_you_know_25">In some fisheries, more than 90% of what\'s caught is unintentional \"bycatch\".</string>
    <string name="did_you_know_26">Plastic waste can take thousands of years to degrade, and millions of tons end up in the ocean each year.</string>
    <string name="did_you_know_27">Longlines, which are used to catch swordfish, tuna, and sharks, can be miles long and have thousands of hooks.</string>
    <string name="did_you_know_28">Enough longlines are set each year to wrap around the Earth several times.</string>
    <string name="did_you_know_29">The opening of a fishing trawl net is large enough to fit several 747 airplanes.</string>
    <string name="did_you_know_30">Trawl nets, which drag across the seabed to catch bottom-dwelling fish, damage the seafloor so much it can be seen from space.</string>
    <string name="did_you_know_31">There are more fish, and more species of fish in marine protected areas than in adjacent areas where fishing is allowed.</string>
    <string name="did_you_know_32">A much lower percentage of the ocean (less than 1%) is protected than of the land.</string>
    <string name="did_you_know_33">1 in 6 known species of sharks, skates and rays are threatened with extinction.</string>
    <string name="did_you_know_34">1 in 3 known species of open-ocean sharks are threatened with extinction.</string>
    <string name="did_you_know_35">Chemicals from prescription medication end up in the ocean and have all kinds of negative effects on marine life.</string>
    <string name="did_you_know_36">Plastic bags are often believed to be jellyfish by sea turtles, which eat them by mistake and die.</string>
    <string name="did_you_know_37">A single invasive lionfish can produce 2 million eggs in a year.</string>
    <string name="did_you_know_38">You have a 1 in 5 chance of dying from heart disease, but only a 1 in 3,800,000 chance of being killed by a shark.</string>
    <string name="did_you_know_39">There are over 500 known species of sharks!</string>
    <string name="did_you_know_40">A new species of shark, skate, or ray has been discovered approximately every 2 weeks for over a decade.</string>
    <string name="did_you_know_41">The average size of many fish has been decreasing over time. The average swordfish is 2/3 smaller now than in the 1960\'s.</string>
    <string name="did_you_know_42">1 in 5 fish stocks in the United States are considered overfished by the National Marine Fisheries Service.</string>
</resources>