<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#3fb8cd">
        <ImageView
            android:id="@+id/backButton"
            android:layout_width="80dp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:onClick="goBackButton"
            android:src="@drawable/back_button"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/backButton"
            android:layout_centerVertical="true"
            android:gravity="center">
            <iis.production.musingo.objects.TextViewPacifico
                android:id="@+id/barTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/backButton"
                android:textSize="25sp"
                android:text="How To Play"
                android:textColor="#ffffff"/>
            </LinearLayout>
        </RelativeLayout>
    <ScrollView
        android:layout_below="@id/topBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <iis.production.musingo.objects.TextViewPacifico
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1"
                android:textColor="#ee5e91"
                android:textSize="28sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>
            <iis.production.musingo.objects.TextViewArchitects
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:textSize="16sp"
                android:lineSpacingExtra="-2dp"
                android:textColor="#ffffff"
                android:gravity="center_horizontal"/>
            <iis.production.musingo.objects.TextViewPacifico
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2"
                android:textColor="#ee5e91"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"/>
            <iis.production.musingo.objects.TextViewArchitects
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:gravity="center_horizontal"/>
            <iis.production.musingo.objects.TextViewPacifico
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3"
                android:textColor="#ee5e91"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"/>
            <iis.production.musingo.objects.TextViewArchitects
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:gravity="center_horizontal"/>
            <iis.production.musingo.objects.TextViewPacifico
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="4"
                android:textColor="#ee5e91"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"/>
            <iis.production.musingo.objects.TextViewArchitects
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/four"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:gravity="center_horizontal"/>
            <iis.production.musingo.objects.TextViewPacifico
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Powerups"
                android:textColor="#ee5e91"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"/>
            <LinearLayout
                android:id="@+id/hintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/hint_big"/>
                <iis.production.musingo.objects.TextViewArchitects
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint"
                    android:textSize="14sp"
                    android:textColor="#ffffff"
                    android:gravity="left"/>
                </LinearLayout>
            <LinearLayout
                android:id="@+id/freezeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/freeze_big"/>
                <iis.production.musingo.objects.TextViewArchitects
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/freeze"
                    android:textSize="14sp"
                    android:textColor="#ffffff"
                    android:gravity="left"/>
                </LinearLayout>
            <LinearLayout
                android:id="@+id/skipLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/skip_big"/>
                <iis.production.musingo.objects.TextViewArchitects
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/skip"
                    android:textSize="14sp"
                    android:textColor="#ffffff"
                    android:gravity="left"/>
                </LinearLayout>
            <LinearLayout
                android:id="@+id/replayLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/replay_big"/>
                <iis.production.musingo.objects.TextViewArchitects
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/replay"
                    android:textSize="14sp"
                    android:textColor="#ffffff"
                    android:gravity="left"/>
                </LinearLayout>
            <LinearLayout
                android:id="@+id/longerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/longer_clip_big"/>
                <iis.production.musingo.objects.TextViewArchitects
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/longer_clip"
                    android:textSize="14sp"
                    android:textColor="#ffffff"
                    android:gravity="left"/>
                </LinearLayout>
            <LinearLayout
                android:id="@+id/helpLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/help_big"/>
                <iis.production.musingo.objects.TextViewArchitects
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help"
                    android:textSize="14sp"
                    android:textColor="#ffffff"
                    android:gravity="left"/>
                </LinearLayout>
            <LinearLayout
                android:id="@+id/nextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/next_playlist_big"/>
                <iis.production.musingo.objects.TextViewArchitects
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/next_playlist"
                    android:textSize="14sp"
                    android:textColor="#ffffff"
                    android:gravity="left"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
</RelativeLayout>