<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#3fb8cd">
        <ImageView
            android:id="@+id/backButton"
            android:layout_width="80dp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:onClick="goBackButton"
            android:src="@drawable/back_button"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/backButton"
            android:layout_centerVertical="true"
            android:gravity="center">
            <iis.production.musingo.objects.TextViewPacifico
                android:id="@+id/barTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/backButton"
                android:textSize="25sp"
                android:text=""
                android:textColor="#ffffff"
                style="@style/Shadow"/>
        </LinearLayout>
    </RelativeLayout>
    <ScrollView
        android:layout_below="@id/topBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/aboutUs"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <iis.production.musingo.objects.TextViewArchitects
                    android:id="@+id/aboutUs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/aboutUs"
                    android:gravity="center_horizontal"
                    android:textColor="#ffffff"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>

                <iis.production.musingo.objects.TextViewArchitects
                    android:id="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="www.goodworldgames.com"
                    android:textColor="#e85c8d"
                    android:paddingTop="10dp"
                    android:onClick="goToSite"
                    android:paddingBottom="10dp"
                    android:gravity="center_horizontal"/>
                </LinearLayout>
            <LinearLayout
                android:id="@+id/aboutOurPartners"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <iis.production.musingo.objects.TextViewArchitects
                    android:id="@+id/aboutPartners"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="17sp"
                    android:text="@string/our_aim"
                    android:gravity="center_horizontal"
                    android:textColor="#9ad74c"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ffffff"/>
                <LinearLayout
                    android:id="@+id/aboutTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="60dp"
                        android:layout_marginLeft="10dp"
                        android:layout_centerVertical="true"
                        android:layout_height="wrap_content"
                        android:onClick="goBackButton"
                        android:src="@drawable/partner_logo"/>
                    <iis.production.musingo.objects.TextViewArchitects
                        android:id="@+id/aboutPartners"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:text="@string/partners_title"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:textColor="#ffffff"/>
                    </LinearLayout>
                <iis.production.musingo.objects.TextViewArchitects
                    android:id="@+id/text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/partners_text"
                    android:onClick="goToSite"
                    android:gravity="left"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="#ffffff"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
